# stm-den

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM32F407VG_FLASH_BL.ld  main.c  meson.build  stm-den.ewp  stm-den.eww  stm32f407.ini  write.sh
app/: main.c  task.c  task.h  time.h
app/bme280/: bme280.c  bme280.h
app/board/: board.c  board.h
app/ds1307/: ds1307.c  ds1307.h
app/i2c/: i2c.c  i2c.h
app/lcd/: commands.h  digs.c  font.h  lcd.c  lcd.h
app/spi/: spi.c  spi.h
app/sys/: sys.c  sys.h
app/uart/: uart.c  uart.h
lib/ILI9341/: config.h  core.c  core.h  delay.c  delay.h  dma.c  dma.h  text.c
lib/encoder/: encoder.c  encoder.h
lib/periph/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
lib/tinystd/: itoa.c  itoa.h
lib/usart/: usart.c  usart.h
